--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -5,6 +5,6 @@ docker:
 
 parameters:
   image:
-    description: Specify Docker image for executor test
+    description: Specify Docker image for executor
     type: string
     default: cimg/base:2020.01
